--- a/project/econophysics.html
+++ b/project/econophysics.html
@@ -58,17 +58,18 @@
 
                         <div class="timeline">
                             <span class="timeline-icon"></span>
-                            <span class="year"> CHAPTER X </span>
+                            <span class="year"> CHAPTER 1 </span>
                             <div class="timeline-content">
-                                <h3 class="title"> Chapter Detail as Title </h3>
+                                <h3 class="title"> Random Walk </h3>
                                 <p class="description">
-                                    This section is under construction. Some placeholder test are here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                    In this chapter, we discuss some statistical properties used in Econophysics. Econophysics explore how socio-economic systems can be studied from a physicist’s perspective. This course presents the approach adopted by physicists to analyze and model financial markets.
 
                                     <ul>
 
-                                    <li> This is first bullet point </li>
-                                    <li> This is second bullet point </li>
-                                    <li> This is third Bullet point</li>
+                                    <li> 1D Random Walk </li>
+                                    <li> Gaussian Process </li>
+                                    <li> Speed of Convergence</li>
+                                    <li> Berry - Essen Theorem 1,2</li>
 
                                 </ul>
                                 </p>
@@ -81,17 +82,18 @@
 
                         <div class="timeline">
                             <span class="timeline-icon"></span>
-                            <span class="year"> CHAPTER X </span>
+                            <span class="year"> CHAPTER 2 </span>
                             <div class="timeline-content">
-                                <h3 class="title text-left"> Chapter Detail as Title </h3>
+                                <h3 class="title text-left"> Stochastic Processes </h3>
                                 <p class="description text-left">
-                                    This section is under construction. Some placeholder test are here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                    This section, we discuss types of stable distribution. A specific type of distribution encountered in the sum of n IID random variables that has the property that it does not change its functional form for different values of n.
 
                                     <ul>
 
-                                    <li class="text-left"> This is first bullet point </li>
-                                    <li class="text-left"> This is second bullet point </li>
-                                    <li class="text-left"> This is third Bullet point</li>
+                                    <li class="text-left"> Lorentzian and Gaussian Distributions  </li>
+                                    <li class="text-left"> Characteristic function of stable process </li>
+                                    <li class="text-left"> Scaling and Self-similarity</li>
+                                    <li class="text-left"> Power Laws</li>
 
                                 </ul>
                                 </p>
@@ -104,17 +106,16 @@
 
                         <div class="timeline">
                             <span class="timeline-icon"></span>
-                            <span class="year"> CHAPTER X </span>
+                            <span class="year"> CHAPTER 3 </span>
                             <div class="timeline-content">
-                                <h3 class="title"> Chapter Detail as Title </h3>
+                                <h3 class="title"> Scales in financial data </h3>
                                 <p class="description">
-                                    This section is under construction. Some placeholder test are here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                    This section, we discuss nature of financial data and statistical analyses to understand market dynamics. Also, applied reasons related to the key problems of option pricing and portfolio management.   
 
                                     <ul>
 
-                                    <li> This is first bullet point </li>
-                                    <li> This is second bullet point </li>
-                                    <li> This is third Bullet point</li>
+                                    <li>  Rate of Return </li>
+                                    
 
                                 </ul>
                                 </p>
@@ -126,17 +127,17 @@
 
                         <div class="timeline">
                             <span class="timeline-icon"></span>
-                            <span class="year"> CHAPTER X </span>
+                            <span class="year"> CHAPTER 4 </span>
                             <div class="timeline-content">
-                                <h3 class="title text-left"> Chapter detail as title </h3>
+                                <h3 class="title text-left"> Stationarity and time correlation </h3>
                                 <p class="description text-left">
-                                    This section is under construction. Some placeholder test are here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                    In this chapter we consider the degree of stationarity observed in time series of price changes in finacial markets. We take a similar approach concerning time correlation, classes of correlation of short-range and long-range correlated stochastic processes. 
 
                                     <ul>
 
-                                    <li class="text-left"> This is first bullet point </li>
-                                    <li class="text-left"> This is second bullet point </li>
-                                    <li class="text-left"> This is third Bullet point</li>
+                                    <li class="text-left"> Correlation </li>
+                                    <li class="text-left"> Long and short range correlation </li>
+                                    <li class="text-left"> Autocorrelation function and spectral density </li>
 
                                 </ul>
                                 </p>
