--- a/project/classical-mechanics.html
+++ b/project/classical-mechanics.html
@@ -174,18 +174,18 @@ systems, Coriolis force, Foucault pendulum
                                 <center> <a href="https://teachme.codes/docs" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
                             </div>
                         </div>
-                        
+
                 <!-- new block starts from  here -->
 
                         <div class="timeline">
                             <span class="timeline-icon"></span>
-                            <span class="year"> CHAPTER IV </span>
+                            <span class="year"> CHAPTER VI </span>
                             <div class="timeline-content">
-                                <h3 class="title text-left"> Variational Principles and Lagrange’s Equations </h3>
+                                <h3 class="title text-left"> Motion of Rigid Bodies </h3>
                                 <p class="description text-left">
-                                    Calculus of variations:
-                                    Geodesics, Minimum surface of revolution, The brachistochrone problem,       Hamilton’s principle and derivation of Lagrange’s equation, Extension of Hamilton’s
-principle to nonholonomic systems (Method of Lagrange undetermined multipliers), Conservation theorems and symmetry properties, Energy function and the conservation of energy 
+                                    Motion of rigid body, Euler’s theorem, angular
+momentum and kinetic energy, the inertia tensor, Euler’s equation of motion,
+torque free motion, Eulerian angle, symmetrical top
 
                                     <ul>
 
