--- a/project/quantum-mechanics.html
+++ b/project/quantum-mechanics.html
@@ -127,6 +127,21 @@
                                     This section is under construction. Some placeholder test are here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
 
                                     <ul>
+
+                                        5.2
+<li class="text-left"> Particle in a box
+<li class="text-left">  Box normalization 
+ <li class="text-left"> Free particle in an infinite potential well and finite potential well </li>
+ <li class="text-left"> Concept of potential: potential with
+finite walls, Potential step & Potential barrier </li>
+ <li class="text-left"> Reflection and
+transmission coefficient </li>
+<li class="text-left"> Interpretation tunneling effect </li>
+<li class="text-left"> Ramsauer Townsend effect </li>
+<li class="text-left"> Smooth barrier</li>
+<li class="text-left"> Cold emission of electrons in a metal: scanning tunneling microscope </li>
+<li class="text-left"> Alpha decay: Geiger Nuttal law </li>
+<li class="text-left"> Virtual binding </li>
 <li class="text-left"> Double well model of a molecule </li>
 <li class="text-left"> Kronig-Penny model for metals </li>
 <li class="text-left"> Revision of angular momentum in spherical coordinates</li>
