--- a/project/quantum-mechanics.html
+++ b/project/quantum-mechanics.html
@@ -129,11 +129,12 @@
                                     <ul>
 
                                         5.2
-<li class="text-left"> Particle in a box
-<li class="text-left">  Box normalization 
- <li class="text-left"> Free particle in an infinite potential well and finite potential well </li>
- <li class="text-left"> Concept of potential: potential with
-finite walls, Potential step & Potential barrier </li>
+<li class="text-left"> Particle in a box and Box normalization </li>
+   
+<li class="text-left"> Concept of potential: potential with
+finite walls,  step and barrier </li>
+ <li class="text-left"> Free particle in an infinite and finite potential well </li>
+ 
  <li class="text-left"> Reflection and
 transmission coefficient </li>
 <li class="text-left"> Interpretation tunneling effect </li>
