--- a/project/quantum-mechanics.html
+++ b/project/quantum-mechanics.html
@@ -63,7 +63,7 @@
                                 <h3 class="title"> Mathematical Tools of Quantum Mechanics </h3>
                                 <p class="description">
                              
-
+ In this chapter we will dicuss and visulise following topics:
                                     <ul>
 
 <li> One particle wave function space</li>
@@ -91,7 +91,7 @@
                             <div class="timeline-content">
                                 <h3 class="title text-left"> Postulates of Quantum Mechanics</h3>
                                 <p class="description text-left">
-                                    This section is under construction. Some placeholder test are here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+             In this chapter we will dicuss and visulise following topics:
 
                                     <ul>
                                   
@@ -124,7 +124,7 @@
                             <div class="timeline-content">
                                 <h3 class="title"> Barriers and Bound States in One Dimension </h3>
                                 <p class="description">
-                                    This section is under construction. Some placeholder test are here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                     In this chapter we will dicuss and visulise following topics: 
 
                                     <ul>                                     
 <li class="text-left"> Particle in a box and Box normalization </li>
@@ -160,7 +160,7 @@ transmission coefficient </li>
                             <div class="timeline-content">
                                 <h3 class="title text-left"> Spin and Magnetic Moment </h3>
                                 <p class="description text-left">
-                                    This section is under construction. Some placeholder test are here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                    In this chapter we will dicuss and visulise following topics:
 
                                     <ul>
 
@@ -190,7 +190,7 @@ transmission coefficient </li>
                             <div class="timeline-content">
                                 <h3 class="title text-left"> Addition of Angular Momenta </h3>
                                 <p class="description text-left">
-                                    This section is under construction. Some placeholder test are here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                  In this chapter we will dicuss and visulise following topics: 
 
                                     <ul>
 
@@ -214,13 +214,12 @@ transmission coefficient </li>
                             <div class="timeline-content">
                                 <h3 class="title text-left"> Stationary Perturbation theory</h3>
                                 <p class="description text-left">
-                                    This section is under construction. Some placeholder test are here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                    In this chapter we will dicuss and visulise following topics:
 
                                     <ul>
 
 <li class="text-left"> Perturbation theory</li>
-<li class="text-left"> Nondegenerate case </li>
- <li class="text-left"> 6.3 Simple applications
+<li class="text-left"> Nondegenerate case and Simple applications </li>
  <li class="text-left">  Degenerate case, Simple cases of removal of degeneracy</li>
  <li class="text-left"> Exchange degeneracy </li>
  <li class="text-left"> Rayleigh Ritz Variation Method </li>
