--- a/project/classical-mechanics.html
+++ b/project/classical-mechanics.html
@@ -62,14 +62,13 @@
                             <div class="timeline-content">
                                 <h3 class="title"> Motion in Central Field </h3>
                                 <p class="description">
-                                    Motion in central force field, motion in arbitrary
-                                    potential field, equation of orbits, Kepler’s laws of planetary motion 
-
+                                    In this chapter we shall discuss the problem of bodies moving under the influence of central force. We shall attempt to explore the problem as throughly as is possible with the tools already developed. 
                                     <ul>
 
-                                    <li> This is first bullet point </li>
-                                    <li> This is second bullet point </li>
-                                    <li> This is third Bullet point</li>
+                                    <li> Motion in central force field </li>
+                                    <li> Motion in arbitrary potential field </li>
+                                    <li> Equation of orbits</li>
+                                    <li> Kepler’s laws of planetary motion</li>
 
                                 </ul>
                                 </p>
@@ -86,14 +85,13 @@
                             <div class="timeline-content">
                                 <h3 class="title text-left"> Elastic and Inelastic Collision </h3>
                                 <p class="description text-left">
-                                    Collision of particles, collision in laboratory and
-                                    center of mass systems, cross section, Rutherford scattering 
+                                    In this chapter we shell discuss the problem related to the collision of bodies. We discuss one and two dimensional elastic and inelastic, both types of collision. 
 
                                     <ul>
 
-                                    <li class="text-left"> This is first bullet point </li>
-                                    <li class="text-left"> This is second bullet point </li>
-                                    <li class="text-left"> This is third Bullet point</li>
+                                    <li class="text-left"> Collision of particles </li>
+                                    <li class="text-left"> Cross section </li>
+                                    <li class="text-left"> Rutherford scattering</li>
 
                                 </ul>
                                 </p>
@@ -111,15 +109,13 @@
                                 <h3 class="title"> Elementary Principles </h3>
                                 <p class="description">
                                     Constraints, Generalized coordinates, generalized
-                                    displacement, generalized velocity, generalized acceleration, generalized
-                                    momentum, generalized force and generalized potential, D’Alembert’s principle
-                                    and Lagrange’s equations 
+                                    displacement, generalized velocity, generalized acceleration,  generalized force and generalized potential,  
 
                                     <ul>
 
-                                    <li> This is first bullet point </li>
-                                    <li> This is second bullet point </li>
-                                    <li> This is third Bullet point</li>
+                                    <li> Generalized notations, eg., coordinate, velocity, acceeration, etc. </li>
+                                    <li> Generalized momentum, force,potential </li>
+                                    <li> D’Alembert’s principle and lagrange’s equations</li>
 
                                 </ul>
                                 </p>
