--- a/project/nuclear-physics.html
+++ b/project/nuclear-physics.html
@@ -58,17 +58,23 @@
 
                         <div class="timeline">
                             <span class="timeline-icon"></span>
-                            <span class="year"> CHAPTER X </span>
+                            <span class="year"> CHAPTER 1 </span>
                             <div class="timeline-content">
-                                <h3 class="title"> Chapter Detail as Title </h3>
+                                <h3 class="title"> Nuclear Forces </h3>
                                 <p class="description">
-                                    This section is under construction. Some placeholder test are here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                    In this chapter we will discuss and visulize following topics: 
 
                                     <ul>
 
-                                    <li> This is first bullet point </li>
-                                    <li> This is second bullet point </li>
-                                    <li> This is third Bullet point</li>
+<li class="text-left"> Nuclear binding energy and saturation of nuclear forces </li> 
+<li class="text-left">Charge independence </li>
+<li class="text-left"> Two nucleon system – deuteron problem </li>
+<li class="text-left"> Ground state of deuteron </li>
+<li class="text-left"> Magnetic moment and Quadrupole moment tensor </li>
+ <li class="text-left"> Interaction: nucleon - nucleon scattering </li>
+ <li class="text-left">  Singlet and triplet parameters </li>
+ <li class="text-left"> Charge independence and  Isospin </li>
+                                    
 
                                 </ul>
                                 </p>
@@ -81,42 +87,50 @@
 
                         <div class="timeline">
                             <span class="timeline-icon"></span>
-                            <span class="year"> CHAPTER X </span>
+                            <span class="year"> CHAPTER 2 </span>
                             <div class="timeline-content">
-                                <h3 class="title text-left"> Chapter Detail as Title </h3>
-                                <p class="description text-left">
-                                    This section is under construction. Some placeholder test are here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-
-                                    <ul>
-
-                                    <li class="text-left"> This is first bullet point </li>
-                                    <li class="text-left"> This is second bullet point </li>
-                                    <li class="text-left"> This is third Bullet point</li>
-
-                                </ul>
-                                </p>
-                                <center> <a href="https://teachme.codes/docs" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
-                            </div>
-                        </div>
-
-
-                        <!-- new block starts from  here -->
-
-                        <div class="timeline">
-                            <span class="timeline-icon"></span>
-                            <span class="year"> CHAPTER X </span>
-                            <div class="timeline-content">
-                                <h3 class="title"> Chapter Detail as Title </h3>
+                                <h3 class="title"> Nuclear Reactions </h3>
                                 <p class="description">
-                                    This section is under construction. Some placeholder test are here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                    In this chapter we will discuss and visulize following topics: 
 
                                     <ul>
 
-                                    <li> This is first bullet point </li>
-                                    <li> This is second bullet point </li>
-                                    <li> This is third Bullet point</li>
-
+<li class="text-left"> Nuclear transmutation </li> 
+<li class="text-left"> Discovery of neutrons </li>
+<li class="text-left"> Characterization and types of nuclear reactions </li>
+<li class="text-left"> Conservation theorems in nuclear reactions </li>
+<li class="text-left"> Q-value and Threshold energy </li>
+ <li class="text-left"> Cross-section of nuclear reactions </li>
+ <li class="text-left">  Differential cross section </li>
+ <li class="text-left"> Compound nucleus hypothesis </li>
+                                    
                                 </ul>
+                                </p>
+                                <center> <a href="https://teachme.codes/docs" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
+                            </div>
+                        </div>
+
+
+                        <!-- new block starts from  here -->
+
+                        <div class="timeline">
+                            <span class="timeline-icon"></span>
+                            <span class="year"> CHAPTER 3 </span>
+                            <div class="timeline-content">
+                                <h3 class="title">  Nuclear Models </h3>
+                                <p class="description">
+                        <ul>
+
+<li> Condition of nuclear stability </li>
+ <li> Liquid drop model, nuclear fission </li>
+<li> Semi-empirical mass formula</li>
+ <li> Bohr-Wheeler theory </li>
+<li> Shell model:prediction </li>
+<li> Energy level scheme and explanations of magic numbers</li>
+  <li> Experimental evidences for nuclear magic numbers </li>
+<li> Spin-orbit coupling </li>
+<li> Spins of nuclei and Magnetic moments. </li>  
+                             </ul>
                                 </p>
                                 <center> <a href="https://teachme.codes/docs" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
                             </div>
@@ -126,17 +140,22 @@
 
                         <div class="timeline">
                             <span class="timeline-icon"></span>
-                            <span class="year"> CHAPTER X </span>
+                            <span class="year"> CHAPTER 4 </span>
                             <div class="timeline-content">
-                                <h3 class="title text-left"> Chapter detail as title </h3>
+                                <h3 class="title text-left"> Weak Nuclear Force </h3>
                                 <p class="description text-left">
-                                    This section is under construction. Some placeholder test are here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                    5.1 , 5.2 , 5.3 , 5.4  5.6 Cross-section of neutrino 5.7 , 5.8 , 5.9 , 5.10 
 
                                     <ul>
 
-                                    <li class="text-left"> This is first bullet point </li>
-                                    <li class="text-left"> This is second bullet point </li>
-                                    <li class="text-left"> This is third Bullet point</li>
+<li class="text-left"> Beta decay - energy spectrum </li>
+<li class="text-left"> Fermi theory: neutrino hypothesis </li>
+<li class="text-left"> Fermi Curie plot</li>
+<li class="text-left"> Fermi and Gammow – Teller selection rules </li>
+<li class="text-left"> Decay rates - non conservation and selection rules</li>
+ <li class="text-left"> This is second bullet point </li>
+<li class="text-left"> Nuclear isometrics </li>
+<li class="text-left"> Angular correction in successive gamma emissions </li>
 
                                 </ul>
                                 </p>
