--- a/project/nuclear-physics.html
+++ b/project/nuclear-physics.html
@@ -83,15 +83,14 @@
                         </div>
 
 
-                        <!-- new block starts from  here -->
+                       <!-- new block starts from  here -->
 
                         <div class="timeline">
                             <span class="timeline-icon"></span>
                             <span class="year"> CHAPTER 2 </span>
                             <div class="timeline-content">
-                                <h3 class="title"> Nuclear Reactions </h3>
-                                <p class="description">
-                                    In this chapter we will discuss and visulize following topics: 
+                                <h3 class="title text-left"> Nuclear reactions </h3>
+                                <p class="description text-left">
 
                                     <ul>
 
