--- a/project/classical-mechanics.html
+++ b/project/classical-mechanics.html
@@ -201,7 +201,7 @@
                             <div class="timeline-content">
                                 <h3 class="title"> Relativity </h3>
                                 <p class="description">
-                                   In this chapter we shall review the assumptions of special theory of relativity and the consequences of these assumptions. Then we examine the formalism of the geometric picture of space-time. 
+                                   In this chapter we shall review the assumptions of special theory of relativity and the consequences of these assumptions. Then, we also examine the formalism of the geometric picture of space-time. 
                                     <ul>
 
                                     <li> Gallilean transformation </li>
