--- a/project/numerical-methods.html
+++ b/project/numerical-methods.html
@@ -94,6 +94,7 @@
                                 <h3 class="title text-left"> Inerpolation & Extrapolation </h3>
                                 <p class="description text-left">
                                     Extrapolation and interpolation are both used to estimate hypothetical values for a variable based on other observations. Here we will examine the differences between them and their applications.
+                                 In this chapter we will discuss and visulize following topics:
 
                             <ul>
                                  <li class ="text-left"> Lagrange interpolation</li>
@@ -115,7 +116,7 @@
                                 <h3 class="title">Numerical Differentiation</h3>
                                 <p class="description">
 
-                                    This section is under construction. This chapter description will go here...
+                             In this chapter we will discuss and visulize following topics:
                                     
                                  <ul>
 
@@ -138,7 +139,7 @@
                             <div class="timeline-content">
                                 <h3 class="title text-left"> Numerical Integration </h3>
                                 <p class="description text-left">
-                                    This section is under construction. This chapter description will go here. Some placeholder test are here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                    This section is under construction. This chapter description will go here. Some placeholder test are here.   In this chapter we will discuss and visulize following topics:
 
                                 <ul>
                                         <li class ="text-left"> Trapezoidal Rule </li>
@@ -162,7 +163,7 @@
                             <div class="timeline-content">
                                 <h3 class="title"> Ordinary & Partial differential equation </h3>
                                 <p class="description">
-                                    This section is under construction. Some placeholder test are here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                    This section is under construction. This chapter description will go here. Some placeholder test are here.   In this chapter we will discuss and visulize following topics:
 
                                     <ul>
 
