--- a/project/numerical-methods.html
+++ b/project/numerical-methods.html
@@ -143,8 +143,8 @@
 
                                 <ul>
                                         <li class ="text-left"> Trapezoidal Rule </li>
-                                        <li class ="text-left"> Simpson's Rule, </li>
-                                        <li class ="text-left"> The simple pendulum,</li>
+                                        <li class ="text-left"> Simpson's Rule </li>
+                                        <li class ="text-left"> The simple pendulum</li>
                                         <li class ="text-left"> Multidimensional numerical integration </li>
                                         <li class ="text-left"> Monte Carlo numerical integration</li>
                                 </ul>
