--- a/project/quantum-mechanics.html
+++ b/project/quantum-mechanics.html
@@ -70,7 +70,7 @@
  <li>Projection operator, Hermitian conjugation </li>
 <li> Representation in state space  </li>
  <li> Eigenvalue equations, observables </li>
- <li> Sets of commuting observables, complete sets of commuting observables </li>
+ <li> Complete sets of commuting observables </li>
                                </ul>
                                 </p>
                                 <center> <a href="https://teachme.codes/docs" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
