Update Statistical and Thermodynamics
Replace placeholders

--- a/project/statistical-and-thermal-physics.html
+++ b/project/statistical-and-thermal-physics.html
@@ -58,17 +58,18 @@
 
                         <div class="timeline">
                             <span class="timeline-icon"></span>
-                            <span class="year"> CHAPTER X </span>
+                            <span class="year"> CHAPTER 1 </span>
                             <div class="timeline-content">
-                                <h3 class="title"> Chapter Detail as Title </h3>
+                                <h3 class="title"> Statistical Physics </h3>
                                 <p class="description">
-                                    This section is under construction. Some placeholder test are here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                    This section we discuss Classical and Quantum Statistical Physics.  
 
                                     <ul>
 
-                                    <li> This is first bullet point </li>
-                                    <li> This is second bullet point </li>
-                                    <li> This is third Bullet point</li>
+                                    <li> Maxwell-Boltzmann statistics </li>
+                                    <li> Fermi-Dirac statistics </li>
+                                    <li> Bose-Einstein statistics</li>
+                                    <li> Electron gas in metals and Fermi energy </li>
 
                                 </ul>
                                 </p>
@@ -81,17 +82,17 @@
 
                         <div class="timeline">
                             <span class="timeline-icon"></span>
-                            <span class="year"> CHAPTER X </span>
+                            <span class="year"> CHAPTER 2 </span>
                             <div class="timeline-content">
-                                <h3 class="title text-left"> Chapter Detail as Title </h3>
+                                <h3 class="title text-left">  Thermodynamics and Application </h3>
                                 <p class="description text-left">
-                                    This section is under construction. Some placeholder test are here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                    In this section we study fundamental concepts of Thermodynamics and application.  
 
                                     <ul>
 
-                                    <li class="text-left"> This is first bullet point </li>
-                                    <li class="text-left"> This is second bullet point </li>
-                                    <li class="text-left"> This is third Bullet point</li>
+                                    <li class="text-left"> Laws of Thermodynamics </li>
+                                    <li class="text-left"> Maxwell’s thermodynamic relations </li>
+                                    <li class="text-left"> Clausius-Clapeyron equation </li>
 
                                 </ul>
                                 </p>
@@ -104,17 +105,18 @@
 
                         <div class="timeline">
                             <span class="timeline-icon"></span>
-                            <span class="year"> CHAPTER X </span>
+                            <span class="year"> CHAPTER 3 </span>
                             <div class="timeline-content">
-                                <h3 class="title"> Chapter Detail as Title </h3>
+                                <h3 class="title"> Low Temperature and Transport Phenomenon </h3>
                                 <p class="description">
-                                    This section is under construction. Some placeholder test are here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                   In this section we study fundamental concepts of Low Temperature and Transport Phenomenon of Thermodynamics.  
+
 
                                     <ul>
 
-                                    <li> This is first bullet point </li>
-                                    <li> This is second bullet point </li>
-                                    <li> This is third Bullet point</li>
+                                    <li> Critical temperature and their relations</li>
+                                    <li> Thermal conductivity </li>
+                                    <li> Einstein’s theory of Brownian motion </li>
 
                                 </ul>
                                 </p>
@@ -126,17 +128,18 @@
 
                         <div class="timeline">
                             <span class="timeline-icon"></span>
-                            <span class="year"> CHAPTER X </span>
+                            <span class="year"> CHAPTER 4 </span>
                             <div class="timeline-content">
-                                <h3 class="title text-left"> Chapter detail as title </h3>
+                                <h3 class="title text-left"> Black Body Radiation </h3>
                                 <p class="description text-left">
-                                    This section is under construction. Some placeholder test are here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                    In this section we study fundamental concepts of Black Body Radiation.  
 
                                     <ul>
 
-                                    <li class="text-left"> This is first bullet point </li>
-                                    <li class="text-left"> This is second bullet point </li>
-                                    <li class="text-left"> This is third Bullet point</li>
+                                    <li class="text-left"> Spectrum of black body radiation </li>
+                                    <li class="text-left"> Wien’s displacement law </li>
+                                    <li class="text-left"> Planck’s radiation law </li>
+                                    <li class="text-left">  Rayleigh-Jean’s law </li>
 
                                 </ul>
                                 </p>
